<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="0dp">

    <LinearLayout
        style="@style/PopupLinearLayout"
        android:onClick="onPopupEdit">

        <ImageView
            style="@style/PopupImage"
            android:src="@mipmap/popup_edit_button" />

        <TextView
            style="@style/PopupTextView"
            android:text="@string/edit" />
    </LinearLayout>

    <!--<ImageButton-->
        <!--style="@style/MenuPadImageButton"-->
        <!--android:onClick="onPopupEdit"-->
        <!--android:src="@mipmap/popup_edit_button" />-->


    <LinearLayout
        style="@style/PopupLinearLayout"
        android:onClick="onPopupChange">

        <ImageView
            style="@style/PopupImage"
            android:src="@mipmap/popup_change_button" />

        <TextView
            style="@style/PopupTextView"
            android:text="@string/replace" />
    </LinearLayout>

    <!--<ImageButton-->
        <!--style="@style/MenuPadImageButton"-->
        <!--android:onClick="onPopupChange"-->
        <!--android:src="@mipmap/popup_change_button" />-->

    <LinearLayout
        style="@style/PopupLinearLayout"
        android:onClick="onPopupDelete">

        <ImageView
            style="@style/PopupImage"
            android:src="@mipmap/popup_delete_button" />

        <TextView
            style="@style/PopupTextView"
            android:text="@string/delete" />
    </LinearLayout>

    <!--<ImageButton-->
        <!--style="@style/MenuPadImageButton"-->
        <!--android:onClick="onPopupDelete"-->
        <!--android:src="@mipmap/popup_delete_button" />-->

    <LinearLayout
        style="@style/PopupLinearLayout"
        android:onClick="onPopupCancel">

        <ImageView
            style="@style/PopupImage"
            android:src="@mipmap/popup_cancel_button" />

        <TextView
            style="@style/PopupTextView"
            android:text="@string/cancel" />
    </LinearLayout>

    <!--<ImageButton-->
        <!--style="@style/MenuPadImageButton"-->
        <!--android:onClick="onPopupCancel"-->
        <!--android:src="@mipmap/popup_cancel_button" />-->

</LinearLayout>