<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:paddingBottom="20dp" >

    <ImageView
        android:id="@+id/dialog_top_image_view"
        style="@style/DialogTopImageView"
        android:src="@mipmap/ic_drawer_top" />

    <LinearLayout style="@style/DialogMainLinearLayout" >

        <TextView
            style="@style/DialogMainContentTextView"
            android:text="@string/dialog_title_photocollage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/dialog_cancel_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@anim/button_round_corner_gray"
                android:text="@string/settings_rate_cancel"
                android:textColor="@color/color_title_dialog_share_content" />

            <Button
                android:id="@+id/dialog_rate_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@anim/button_round_corner_green"
                android:text="@string/settings_rate"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>